2003-02-02  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkwidget.c: The argument of Gtk::Widget#create_pango_layout is now omittable.
	* All files: Update copyright.

2003-01-31  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/misc/dndtreeview.rb: Add a sample.
	* sample/misc/dnd.rb: Modified.
	* src/rbgtkselectiondata.c: Fix problem to create object. 

2003-01-26  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkpixmap.c: Gdk::Pixmap#colormap_create_from_xpm_d, colormap_create_from_xpm: 
	Accept nil to 1st argument.

2003-01-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkselectiondata.c: Gtk::SelectionData#set's size is now omittable.
	* src/global.c: Removed.
	* rbgtkradiomenuitem.c: Move ary2gslist from global.c.
	* src/rbgdkwindow.c, rbgdkatom.c, rbgtk.h: rb2gdk_atom() in rbgdkwindow.c -> get_gdkatom() 
	in rbgdkatom.c. Add RVAL2ATOM to rbgtk.h.
	* src/rbgtkclipboard.c, rbgdkselection.c, rbgtkdrag.c: Apply RVAL2ATOM.

2003-01-19  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkdrag.c: Unify Gtk::Drag#set_icon_widget and 
	#set_icon_pixmap to #set_icon.
	Fix method name of set_default_icon to set_icon_default.
	Gtk::Drag#source_set_icon accept Gdk::Pixmap, Gdk::Pixbuf 
	and Gtk::Stock constants.
	Add Gtk::Drag#threshold?.
	* src/*.c, sample/*/*.rb: Update Copyright.
	* sample/misc/dnd.rb: Some fixes. But this hasn't work yet.

2003-01-19  Geoff Youngs <g@intersect-uk.co.uk>

	* src/rbgtkdrag.c:  Add Gtk::Drag.set_icon_pixbuf.
	* src/rbgdkwindow.c: Change arguments of Gdk::Window#property_(change|get|.
	* Gdk::Window#property_(get|change|delete): Accept strings as the atom value.
	* Fix a bug of Gdk::Window#property_get.

2003-01-18  KUBO Takehiro  <kubo@jiubao.org>

	* extconf.rb: make Makefiles for gtk20.so and gtk22.so.
	* src/init.c: load gtk20.so or gtk22.so according to Gtk version.
	* src/rbgtk.h: add prototypes.
	rename GTK_TYPE_CLIPBOARD to RBGTK_TYPE_CLIPBOARD.
	rename GTK_TYPE_TREE_ROW_REFERENCE to RBGTK_TYPE_TREE_ROW_REFERENCE.