@@ -4,7 +4,7 @@
   rbgtkconst.c -
 
   $Author: mutoh $
-  $Date: 2003/02/01 16:46:23 $
+  $Date: 2003/02/02 09:33:17 $
 
   Copyright (C) 2002,2003 Ruby-GNOME2 Project Team
   Copyright (C) 1998-2000 Yukihiro Matsumoto,
@@ -15,8 +15,8 @@
 #include "global.h"
 
 #define RBGTK_MAJOR_VERSION 0
-#define RBGTK_MINOR_VERSION 0
-#define RBGTK_MICRO_VERSION 2
+#define RBGTK_MINOR_VERSION 3
+#define RBGTK_MICRO_VERSION 0
 
 /*
  * constants
