@@ -1,6 +1,12 @@
+2003-02-02  Geoff Youngs <g@intersect-uk.co.uk>
+
+	* src/rbgdkgc.c: Fix Gdk::GC#set_clip_rectangle passed the wrong type
+	to RVAL2BOXED.
+
 2003-02-02  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* src/rbgtkwidget.c: The argument of Gtk::Widget#create_pango_layout is now omittable.
+	* src/rbgtkconstant.c: Update version information.
 	* All files: Update copyright.
 
 2003-01-31  Masao Mutoh  <mutoh@highway.ne.jp>
